update java basic

--- a/java_htmltestpage.html
+++ b/java_htmltestpage.html
@@ -11,6 +11,10 @@
   <h1 id="pageheading">Page Heading</h1>
   <p id="paragraph">Page Content</p>
 
+<input type="text" class="" id="myinput">
+<p></p>
+<input type="button" id="mybutton" class="mybutton" value="click Me" />
+<div id="result"> </div>
 
 </body>
 </html>
